Fix wrap name when at small devices

--- a/src/pages/curriculum-vitae/style.css
+++ b/src/pages/curriculum-vitae/style.css
@@ -43,6 +43,7 @@ h3 {
 .Header .info {
   flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
